--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches: ["main"]
     tags:
-      - "v*.*.*"     # e.g., v1.2.3 -> publishes 1.2.3, 1.2, 1
+      - "v*.*.*"         # e.g., v1.2.3 -> publishes 1.2.3, 1.2, 1
   pull_request:
     branches: ["main"]
+  workflow_dispatch: {}   # allow manual runs
 
 concurrency:
   group: docker-publish-${{ github.ref }}
@@ -36,7 +37,7 @@ jobs:
           install: true
 
       - name: Login to Docker Hub (on push only)
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -54,7 +55,7 @@ jobs:
             type=edge,branch=main
             type=sha,format=short,prefix=sha-
 
-      # Build PRs safely (no push)
+      # Build PRs (no push, no secrets)
       - name: Build (PR only)
         if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v6
@@ -67,9 +68,9 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # Build & push on main/tags
-      - name: Build & Push (main/tags)
-        if: github.event_name == 'push'
+      # Build & push on main/tags/manual run
+      - name: Build & Push (main/tags/manual)
+        if: github.event_name != 'pull_request'
         uses: docker/build-push-action@v6
         with:
           context: .
